# public/openapi.json
@@ -7388,6 +7388,28 @@
         "responses": {}
       }
     },
+    "/cron/deliver-loan-outcomes": {
+      "get": {
+        "operationId": "get-cron-deliver-loan-outcomes",
+        "summary": "",
+        "description": "",
+        "tags": [
+          "Cron"
+        ],
+        "parameters": [],
+        "responses": {}
+      },
+      "post": {
+        "operationId": "post-cron-deliver-loan-outcomes",
+        "summary": "",
+        "description": "",
+        "tags": [
+          "Cron"
+        ],
+        "parameters": [],
+        "responses": {}
+      }
+    },
     "/cron/deliver-payment-outcomes": {
       "get": {
         "operationId": "get-cron-deliver-payment-outcomes",
